; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/mm/extr_swapfile.c_swapcache_free.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/mm/extr_swapfile.c_swapcache_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.page = type { i32 }
%struct.swap_info_struct = type { i32 }

@SWAP_HAS_CACHE = common dso_local global i32 0, align 4
@swap_lock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @swapcache_free(i32 %0, %struct.page* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.page*, align 8
  %5 = alloca %struct.swap_info_struct*, align 8
  %6 = alloca i8, align 1
  store i32 %0, i32* %3, align 4
  store %struct.page* %1, %struct.page** %4, align 8
  %7 = load i32, i32* %3, align 4
  %8 = call %struct.swap_info_struct* @swap_info_get(i32 %7)
  store %struct.swap_info_struct* %8, %struct.swap_info_struct** %5, align 8
  %9 = load %struct.swap_info_struct*, %struct.swap_info_struct** %5, align 8
  %10 = icmp ne %struct.swap_info_struct* %9, null
  br i1 %10, label %11, label %28

11:                                               ; preds = %2
  %12 = load %struct.swap_info_struct*, %struct.swap_info_struct** %5, align 8
  %13 = load i32, i32* %3, align 4
  %14 = load i32, i32* @SWAP_HAS_CACHE, align 4
  %15 = call zeroext i8 @swap_entry_free(%struct.swap_info_struct* %12, i32 %13, i32 %14)
  store i8 %15, i8* %6, align 1
  %16 = load %struct.page*, %struct.page** %4, align 8
  %17 = icmp ne %struct.page* %16, null
  br i1 %17, label %18, label %26

18:                                               ; preds = %11
  %19 = load %struct.page*, %struct.page** %4, align 8
  %20 = load i32, i32* %3, align 4
  %21 = load i8, i8* %6, align 1
  %22 = zext i8 %21 to i32
  %23 = icmp ne i32 %22, 0
  %24 = zext i1 %23 to i32
  %25 = call i32 @mem_cgroup_uncharge_swapcache(%struct.page* %19, i32 %20, i32 %24)
  br label %26

26:                                               ; preds = %18, %11
  %27 = call i32 @spin_unlock(i32* @swap_lock)
  br label %28

28:                                               ; preds = %26, %2
  ret void
}

declare dso_local %struct.swap_info_struct* @swap_info_get(i32) #1

declare dso_local zeroext i8 @swap_entry_free(%struct.swap_info_struct*, i32, i32) #1

declare dso_local i32 @mem_cgroup_uncharge_swapcache(%struct.page*, i32, i32) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
